--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,17 +10,18 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     color: #f1f1f1;
     overflow-x: scroll;
+    overflow-y: hidden;
 }
 main{
     display: flex;
     height: 70vh;
-    margin: 15vh 0 15vh 10vw;
+    margin: 15vh 0;
 }
 
 /* **************** All **************** */
 section{
     flex: 0 0 auto;
-    height: 100%;
+    height: 70vh;
     display: grid;
     grid-template-columns: 1fr auto;
     box-shadow: 0px 0px 30px #00000099;
@@ -59,7 +60,7 @@ a:hover{
 
 /* **************** intro **************** */
 #intro{
-    /* margin-left: 10vw; */
+    margin-left: 10vw;
 }
 #intro .text{
     background: linear-gradient(45deg, #726193 20%, #e37b7c 60%, #ffe4b4);
